syntax = "proto3";
option csharp_namespace = "StoreWebAPI.Application.Product";
import "google/protobuf/wrappers.proto";
package store;

message NewProductRequest {
	string name=1;	
	int32  price =2;
	int32 store_id=3;
}
message EditProductRequest {
	int32 id =1;
	string name=2;	
	int32  price =3;
	int32 store_id=4;
}

message GetNewProductResponse{
	int32  id =1;
	string name=2;	
	int32  price =3;
	int32 store_id=4;
}
message DeleteProductRequest{
	int32  id =1;
}
message DeleteProductResponse{
	bool   success = 1;
    string message = 2;
}
message ListProductsRequest{
	google.protobuf.StringValue  name=1 ;
	google.protobuf.Int32Value  price=2 ;
	google.protobuf.Int32Value  store_id=3 ;
		
}
message ListProductsResponse{
	repeated GetProductByIdResponse Product =1;
}
message GetProductByIdRequest {
	int32  id =1;	
}
message GetProductByIdResponse {
	int32  id =1;
	string name=2;	
	int32  price =3;
	int32 store_id=4;	
}